<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.fbarrios.androiddev.aboutme.activity.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:fontFamily="sans-serif-light"
            android:paddingBottom="32dp"
            android:paddingEnd="12dp"
            android:paddingStart="12dp"
            android:paddingTop="32dp"
            android:text="@string/biography"
            android:textAlignment="viewStart"
            android:textColor="@color/white" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvAreaLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/column_name_area" />

            <TextView
                android:layout_alignParentEnd="true"
                android:id="@+id/tvYearsLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/column_name_year" />

            <TextView
                android:id="@+id/tvArea1"
                android:layout_below="@+id/tvAreaLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/area_name_1" />

            <TextView
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/tvAreaLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/area_cant_1" />

            <TextView
                android:layout_below="@+id/tvArea1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/area_name_2" />

            <TextView
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/tvArea1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/area_cant_2" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_margin="@dimen/text_margin"
            android:background="@color/colorPrimary" />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
